Removed TODOs from create table scripts
- Got rid of TODOs in create table script
- Created some seed data files put in configuration
- Added TODO to TODO file which states to create seed data for each table

--- a/TODO
+++ b/TODO
@@ -33,3 +33,7 @@
 {CU} Stage
 {CU} Format
 {D} Battle <scheduled>
+
+# Actions
+Enforce limitation on amount of registered pokemon for each league [LeaguePokemon table on insert]
+Add seed data for every table
